--- a/requirements.txt
+++ b/requirements.txt
@@ -420,7 +420,7 @@ wrapt==1.14.1
 xarray==2022.12.0
 xarray-einstats==0.4.0
 xgboost==0.90
-xkit==0.0.0
+xutils
 xlrd==1.2.0
 xlwt==1.3.0
 yarg==0.1.9
