--- a/requirements.txt
+++ b/requirements.txt
@@ -313,7 +313,7 @@ PyOpenGL==3.1.6
 pyparsing==3.0.9
 pyrsistent==0.19.2
 pysimdjson==3.2.0
-pysndfile==1.3.8
+pysndfile
 PySocks==1.7.1
 pystan==3.3.0
 pytest==3.6.4
