--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,9 @@
 azure-cognitiveservices-vision-face==0.6.0
 azure-common==1.1.28
 azure-core==1.26.1
-
-
+os-sys
+requests
 Flask==1.1.4
-
 google==2.0.3
 google-api-core==2.11.0
 google-api-python-client==2.70.0
@@ -26,40 +25,29 @@ google-resumable-media==2.4.0
 googleapis-common-protos==1.57.0
 googledrivedownloader==0.4
 gradio==3.16.0
-
 keras==2.9.0
 Keras-Preprocessing==1.1.2
 keras-vis==0.4.1
-
 marshmallow==3.19.0
 matplotlib==3.2.2
 matplotlib-venn==0.11.7
-
-
 numpy==1.21.6
 oauth2client==4.1.3
 oauthlib==3.2.2
-
 opencv-contrib-python==4.6.0.66
 opencv-python==4.6.0.66
 opencv-python-headless==4.6.0.66
-
 pandas==1.3.5
 pandas-datareader==0.9.0
 pandas-gbq==0.17.9
 pandas-profiling==1.4.1
-
 Pillow==7.1.2
-
 scikit-image==0.18.3
 scikit-learn==1.0.2
 scipy==1.7.3
 scs==3.2.2
 seaborn==0.11.2
-
 sklearn-pandas==1.8.0
-
-
 tensorflow==2.9.2
 tensorflow-datasets==4.6.0
 tensorflow-estimator==2.9.0
